public/css/terminal.css
:root {
  --dodger_blue4:#104e8b;
  --dark_orchid2:#b23aee;
  --green2:#00ee00;
  --white:#ffffff;
  --bisque4:#8b7d6b;
  --blue:#0000ff;
  --spring_green:#00ff7f;
  --gray:#bebebe;
  --yellow:#ffff00;
}

/* unvisited link */
a:link {
  color: var(--dodger_blue4);
  text-shadow: 0 0 4px var(--dodger_blue4);
}

/* visited link */
a:visited {
  color: var(--dark_orchid2);
  text-shadow: 0 0 4px var(--dark_orchid2);
}

/* mouse over link */
a:hover {
  color: var(--green2);
  text-shadow: 0 0 4px var(--green2);
}

/* selected link */
a:active {
  color: var(--dodger_blue4);
  text-shadow: 0 0 4px var(--dodger_blue4);
}

#main-page-title {
  margin: 0 auto;
  padding: 0;
  white-space: pre-wrap;
  color: var(--white);
  text-shadow: 0 0 4px var(--white);
}

nav:hover {
  box-shadow: 0 0 0.2em 0.2em #0ff;
}

h4 {
  padding: 0;
  margin: 0;
  margin-top: 0;
  color: white;
  font-color: white;
  font-family: Sans-Serif;
  font-size: 0.8em;
}

h3 {
  margin: 0 auto;
  padding: 0;
  color: var(--white);
  text-shadow: 0 0 4px var(--white);
  font-family: monospace;
}

#taskbar {
  width: 100%;
}

nav {
  text-align: center;
  clear: both;
  margin: auto;
  max-width: 175px;
  max-height: 90%;
}

nav li {
  dispaly: inline-block;
  list-style: none;
  padding: 0.5em;
  max-width: 7em;
  max-height: 9em;
}

nav ul {
  padding: 0;
  margin: 0.5em;
}

@media (min-width: 1200px) {
  nav {
    float: left;
    width: 10%;
    position: fixed;
    text-align: left;
    font-size: large;
    
    padding: 0;
    margin: auto;
    margin-top: auto;
    background-color: rgba(41,44,45,0.9);
    border: 0.1em solid white;
    text-shadow:
      -1px -1px 0 #000,  
      1px -1px 0 #000,
      -1px 1px 0 #000,
      1px 1px 0 #000;
  }

  nav::before {
    content: "Links";
    text-align: center;
    display: block;
    font-size: large;
    color: violet;
    text-decoration: underline;
    margin: 0.5em;
  }
}

nav li {
  transition: transform 0.3s;
}

nav li:hover {
  transform: scale(1.5);
}

.twin {
  border: 1.5em solid transparent;
  border-image: url(../res/2008.png) 19 12 round;
  padding: 0;
  /* positioning */
  margin: 0 auto;
  margin-top: 75px;
  width: 75%;
  background-color: rgba(0, 0, 0, 0.85);
  
}

.tcontent {
  margin: 0 auto;
  padding: 0;
}


.twin p, span {
  margin: 0 auto;
  padding: 0;
  color: var(--white);
  text-shadow: 0 0 4px var(--white);
}

p.ls {
  white-space: pre-wrap;
}

.cat p {
  white-space: normal;
  margin-bottom: 1.5em;
}

.prompt1 {
  color: var(--bisque4);
  text-shadow: 0 0 4px var(--bisque4);
}

.prompt-break {
  content: '-';
  background-position: center;
  background-color: transparent; 
  background-repeat: repeat-x;
  border: none;
  border-top: 3px double #333;
  color: #333;
  overflow: visible;
  text-align: center;
  height: 0.2em;
}

.prompt2 {
  color: var(--blue);
  text-shadow: 0 0 4px var(--blue);
}

.prompt3 {
  color: var(--yellow);
  text-shadow: 0 0 4px var(--yellow);
}

.prompt4 {
  font-weight: bold;
  text-shadow: 0 0 4px var(--white);
}

h2 {
  color: var(--spring_green);
  font-size: 26pt;
}

body {
  background-color: #2d6189;
  /*background-image: url('../res/back.jpg');*/
  background-repeat: no-repeat; /* Do not repeat the image */
  background-size: cover; /* Resize the background image to cover the entire container */
  background-size: cover;
  background-repeat: no-repeat;
  font-family: monospace;
  font-size: 1.1em;
  -webkit-font-smoothing : none;
  -moz-font-smoothing: never;
}

.fttr {
  margin-top: auto;
  margin: auto;
  margin-top: 75px;
  width: 75%;
}


table {
  width: 100%;
}

table, th, td {
  border: 0.1em solid var(--gray);
  
}

td {
  text-align: left;
}

tr:first-child td {
  vertical-align: center;
}

li {
  color: var(--white);
  text-shadow: 0 0 4px var(--white);
}

th, td {
  margin: 0 auto;
  padding: 0;
  color: var(--white);
  text-shadow: 0 0 4px var(--white);
}

th {
  color: var(--spring_green);
}

